Fix image path to use relative path

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ button:hover { transform: scale(1.1); }
 
     <!-- HEADER -->
     <div class="header">
-        <img src="D:\Kavya\Puzzles\Test\images\logo.png" alt="Smart Math Lab Logo">
+        <img src="images/logo.png" alt="Smart Math Lab Logo">
         <h1>SMART MATH LAB</h1>
     </div>
 
